# distributed-parallel-image-processor

mpi-img-mod-master/: CMakeLists.txt  main.c
